reimpostato un po' tutto, ma le iterazioni forse hanno problemi ?

--- a/FixedPointSolver/Makefile
+++ b/FixedPointSolver/Makefile
@@ -5,12 +5,15 @@ exe_sources=$(filter main%.cpp,$(SRCS))
 EXEC=$(exe_sources:.cpp=)
 EIGEN_DIR=$(mkEigenInc)
 STANDARD=c++17
+OPTFLAGS=-g
+DEFINE=-DTraits=VectorTraits
 #==========================
 
+
 LINK.o = $(CXX) $(LDFLAGS)
-CPPFLAGS=-I. -I$(EIGEN_DIR)
-CXXFLAGS=-std=$(STANDARD)
-LDFLAGS=-std=$(STANDARD)
+CPPFLAGS=-I. -I../Include -I$(EIGEN_DIR) 
+CXXFLAGS=-std=$(STANDARD) $(OPTFLAGS)
+LDFLAGS=-std=$(STANDARD) $(OPTFLAGS)
 LDLIBS=
 
 #==========================
@@ -19,10 +22,10 @@ LDLIBS=
 
 .DEFAULT_GOAL = all
 
-all: make.dep $(EXEC)
+all: makedep $(EXEC)
 
 clean:
-	$(RM) -f $(EXEC) $(OBJS)
+	$(RM) -f $(EXEC) $(OBJS) make.dep
 
 #distclean: clean
 
@@ -33,7 +36,10 @@ $(EXEC): $(OBJS)
 
 $(OBJS): $(SRCS)
 
-make.dep: $(SRCS)
+run:
+	./$(EXEC)
+
+makedep: $(SRCS)
 	$(RM) make.dep
 	for f in $(SRCS); do \
 	$(CXX) $(STDFLAGS) $(CPPFLAGS) -MM $$f >> make.dep; \
