now it allowes the use of simple mixing when Anderon memory is 1.. fixed a few mistakes

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@ OPTFLAGS=-O3
 DEFINE=-DNDEBUG
 # OPTFLAGS=-g
 # DEFINE=-DTraits=VectorTraits
-# DEFINE=EigenSolver
+# DEFINE=-DEigenSolver
 #==========================
 
 
