fixed .gitignore, now allows me to compile without cleaning

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-documents/Papers/
+*.o
+*.aux
+*run 
+*.blg 
+*.toc 
+*.xml 
+*blx.bib 
+*.bbl 
+*.log 
+*.out
+*.run.xml
+*.bib
+*.vrb
+*.nav 
+*.snm
+
+Presentazione\ PACS.pdf
+main_simple_problem
+main_linear_problem
+main_gauss_seidel
+main_testing_parameter
+main_test2_param
+main_nonlinear
+make.dep
+doxygen_sqlite3.db
+profiling.txt
+gmon.out
+src/html/ 
+src/latex/
