--- a/documents/slides/Makefile
+++ b/documents/slides/Makefile
@@ -1,8 +1,10 @@
+#file=Presentazione\ PACS.tex
+file=Presentazione\ finale\ NAPDE.tex
 all:
-	pdflatex Presentazione\ PACS.tex > /dev/null ;\
-	bibtex Presentazione\ PACS> /dev/null;\
-	pdflatex Presentazione\ PACS.tex > /dev/null;\
-	pdflatex Presentazione\ PACS.tex > /dev/null;
+	pdflatex $(file) > /dev/null ;\
+	bibtex $(file)> /dev/null;\
+	pdflatex  $(file)> /dev/null;\
+	pdflatex  $(file)> /dev/null;
 
 clean:
 	rm -f *.aux *.nav *.out *.snm *.toc *.pdf *.blg *.log *.bbl *.run.xml *.bib *.vrb
